--- a/config/database.yml
+++ b/config/database.yml
@@ -80,6 +80,8 @@ test:
 #
 production:
   <<: *default
-  database: futhub_api_production
-  username: futhub_api
-  password: <%= ENV['FUTHUB_API_DATABASE_PASSWORD'] %>
+  # database: futhub_api_production
+  # username: futhub_api
+  # password: <%= ENV['FUTHUB_API_DATABASE_PASSWORD'] %>
+
+  url: <%= ENV['DATABASE_URL'] %>
